--- a/styles/custom.css
+++ b/styles/custom.css
@@ -89,10 +89,41 @@ p.venue {
 .logo.slide img {
   width: 66% !important;
 }
-#inrupt img {
-  width: 50% !important;
-}
 
 #solidlab {
   background: #292F4D;
+}
+
+.shower .label {
+  position: absolute;
+  display: block;
+  background-color: rgba(255,255,255,.8);
+  border-radius: 15px;
+  color: black;
+  padding: 10px;
+}
+.shower .label * {
+  color: black;
+}
+
+.slide.story .label {
+  color: var(--accent);
+  background: none;
+  font-weight: bold;
+  text-shadow:
+    0 0 200px rgba(255, 255, 255, .5),
+    0 0 15px white;
+  left: 40px;
+}
+.slide.story .label.year {
+  top: 64px;
+  font-size: 4em;
+}
+.slide.story .label.item {
+  top: 160px;
+  font-size: 2em;
+}
+.slide.story .label.distance {
+  top: 230px;
+  font-size: 1.66em;
 }
