--- a/styles/custom.css
+++ b/styles/custom.css
@@ -12,36 +12,15 @@ p.venue {
   font-style: italic;
 }
 
-.text.slide p {
-  font-size: 1.2em;
-  line-height: 1.5;
-  margin: 3em 0 1.5em;
-  font-weight: bold;
-  color: var(--accent);
-}
-
-.shower {
-  --accent: #3a2d72;
-}
-
-.shower .caption h1 {
-  line-height: 1.2;
-}
-.shower .caption p {
-  margin-top: .5em;
-}
-p.venue {
-  font-style: italic;
-}
-
 .text.slide {
-  padding-top: 1em;
+  padding-top: 3em;
 }
-.text.slide > p {
-  color: var(--accent);
-  font-weight: bold;
-  font-size: 2em;
+.text.slide p {
+  font-size: 2.5em;
   line-height: 1.33;
+  margin: .5em 0 .5em;
+  font-weight: bold;
+  color: var(--accent);
 }
 
 .slide.cover h2 {
@@ -116,4 +95,8 @@ p.venue {
 .slide.story .label.distance {
   top: 230px;
   font-size: 1.66em;
+}
+
+.dark.slide {
+  background: black;
 }
